challenge_12/webnodb/my-infrastructure/templates/webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb-deployment
  namespace: endiaye
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: faliloundiaye/webdb:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "0.1"
            memory: "100Mi"
          limits:
            cpu: "0.2"
            memory: "200Mi"
        livenessProbe:
          httpGet:
            path: /  # Add a valid path
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
